--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Credit Card Form - VueJs</title>
+    <title>Cartão Limpo</title>
     <link rel="stylesheet" href="https://public.codepenassets.com/css/reset-2.0.min.css">
 <link rel="stylesheet" href="./style.css">
 
@@ -166,9 +166,7 @@
       </div>
     </div>
     
-    <a href="https://github.com/muhammederdem/credit-card-form" target="_blank" class="github-btn">
-      See on GitHub
-    </a>
+  
   </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js'></script>
 <script src='https://unpkg.com/vue-the-mask@0.11.1/dist/vue-the-mask.js'></script><script  src="./script.js"></script>
