--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <div class="card-input">
           <label for="cardName" class="card-input__label">Card Holders</label>
-          <input type="text" id="cardName" class="card-input__input" v-model="cardName" v-on:focus="focusInput" v-on:blur="blurInput" data-ref="cardName" autocomplete="off">
+         <input type="text" id="cardName" class="card-input__input" v-model="cardName" v-on:focus="focusInput" v-on:blur="blurInput" data-ref="cardName" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false">
         </div>
         <div class="card-form__row">
           <div class="card-form__col">
